<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <!--<ImageView
            android:id="@+id/flag"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"
            android:src="@drawable/home_weather" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            android:background="@drawable/home_weather">
                <TextView
                    android:id="@+id/message1"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:typeface="normal"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:text=""/>

                <TextView
                    android:id="@+id/message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:typeface="normal"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_marginLeft="40dp"
                    android:text="@string/location" />

                <TextView
                    android:id="@+id/tv_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:paddingRight="80dp"
                    android:layout_gravity="right"
                    android:text="@string/temp" />

                <TextView
                    android:id="@+id/tv_max_min_temp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:paddingRight="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/min_Max" />

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="match_parent"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="22dp"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/tv_condition"
                    android:layout_width="match_parent"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="22dp"
                    android:text="@string/condition" />

                <TextView
                    android:id="@+id/tv_pressure"
                    android:layout_width="match_parent"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="22dp"
                    android:text="@string/pressure" />

                <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="match_parent"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="22dp"
                    android:text="@string/title_home" />

                <TextView
                    android:id="@+id/tv_blank"
                    android:layout_width="match_parent"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="22dp"
                    />

        </LinearLayout>


</LinearLayout>