<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/loading_indicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:animateLayoutChanges="true"
        android:background="@android:color/black"
        android:clickable="true"
        android:visibility="gone">

    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

    </FrameLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:text="Country:"/>

    <Spinner
        android:id="@+id/country_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:text="City:"/>

    <Spinner
        android:id="@+id/city_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />




    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/city_layout"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:background="@drawable/city">


        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/temp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@string/temp" />

            <TextView
                android:id="@+id/tv_forcast_temp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_height="wrap_content"
                android:text="@string/temp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@string/min_Max" />

            <TextView
                android:id="@+id/tv_forcast_max_min"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_height="wrap_content"
                android:text="@string/min_Max" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@string/description" />

            <TextView
                android:id="@+id/tv_forcast_desc"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_height="wrap_content"
                android:text="@string/description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@string/condition" />

            <TextView
                android:id="@+id/tv_forcast_condition"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_height="wrap_content"
                android:text="@string/condition" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@string/pressure" />

            <TextView
                android:id="@+id/tv_forcast_pressure"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_height="wrap_content"
                android:text="@string/pressure" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@string/humidity" />

            <TextView
                android:id="@+id/tv_forcast_humidity"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_height="wrap_content"
                android:text="@string/humidity" />

        </LinearLayout>


    </LinearLayout>
    <!--<ImageView
        android:id="@+id/image_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/city"
        android:scaleType="fitXY"
        android:visibility="visible"/>-->

</LinearLayout>